fix docs and unit tests from contextualization